workshops/01-how-to-live-in-harmony-with-ARM-templates/completed-labs/lab-03/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "resources": [
        {
            "name": "iac-dev-agw-nsg",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "INT-T443-IN-ALLOW",
                        "properties": {
                            "description": "",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "10.112.16.128/25",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "INT-T80-IN-ALLOW",
                        "properties": {
                            "description": "",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "10.112.16.128/25",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AKS-T443-OUT-ALLOW",
                        "properties": {
                            "description": "",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "10.112.0.0/20",
                            "destinationAddressPrefix": "10.112.16.128/25",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "iac-dev-aks-nsg",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AGW-T443-IN-ALLOW",
                        "properties": {
                            "description": "",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "10.112.16.128/25",
                            "destinationAddressPrefix": "10.112.0.0/20",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "iac-dev-vnet",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "iac-dev-vnet"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'iac-dev-aks-nsg')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'iac-dev-agw-nsg')]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.112.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "aks-net",
                        "properties": {
                            "addressPrefix": "10.112.0.0/20",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'iac-dev-aks-nsg')]"
                            }
                        }
                    },
                    {
                        "name": "agw-net",
                        "properties": {
                            "addressPrefix": "10.112.16.128/25",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'iac-dev-agw-nsg')]"
                            }
                        }
                    }
                ]
            }
        }
    ]
}
